fixed horizontal wrapping issue on article list page

--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -1,7 +1,9 @@
 .App {
-  height: 100vh;
-  width: 100vw;
-  background-color: rgb(41, 41, 41);
+  min-height: 100vh;
+  height:auto;
+  width: 100%;
+  
+  background-color: rgb(8, 8, 8);
 }
 
 .App__header {
