--- a/src/routes/ArticleListPage/ArticleListPage.css
+++ b/src/routes/ArticleListPage/ArticleListPage.css
@@ -3,8 +3,9 @@
     min-height: calc(100vh - 50px);
     height: fit-content;
     width:100%;
-    position: absolute;
+    position: relative;
     bottom:0;
+    overflow: scroll;
     display: grid;
     grid-template-rows: 350px 1fr ;
     grid-template-areas: 
@@ -25,20 +26,21 @@
 }
 .ArticleListContainer{
 width: 100%;
-/* max-width: 100vw; */
-/* overflow: hidden; */
+
+background-color: black;
  grid-area: list;
  padding: 0 50px;
+ z-index: 4;
  
 }
 
 .ArticleList{
    
     display: inline-flex;
-    /* flex-direction: row; */
-    /* flex-wrap: wrap; */
-    padding: 5px;
-    border: 1px solid white;
+    flex-direction: row;
+    flex-wrap: wrap;
+   
+    border-top: 1px solid white;
     
 
 }
